удаление ограничения на 11 типов вопросов